--- a/covid.html
+++ b/covid.html
@@ -27,6 +27,8 @@
 <div id="header"></div>
 
 <h2>Covid Information</h2>
+<br/>
+<div class="mainWrapper">
 <p> In order for us to do our part in best serving and caring for your children, the following measures are implemented and revisions are made as new information becomes available.
     <ol>
         <li> We will thoroughly screen reasons for all ill visits.  Pending those discussions, we will determine best course of action. </li>
@@ -45,12 +47,12 @@
     <p> We recommend using these sources to stay up to date: 
         <br/>
     <br/>
-        <a href="https://www.CDC.gov/coronavirus/2019">https://CDC.gov/coronavirus/2019</a>
+        <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html">https://www.cdc.gov/coronavirus/2019-ncov/index.html</a>
         <br/>
     <br/>
         <a href="https://www.floridahealthcovid19.gov">https://floridahealthcovid19.gov</a>
     </p>
 
-    
+</div>
 </body>
 </html>
