--- a/covid.html
+++ b/covid.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <title>Professional Park Pediatrics - Home</title>
     
-    <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
+     <link rel="stylesheet" type="text/css" href="../styles/all.css" media="all">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
 <script
